--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "hisorange/browser-detect": "^4.3",
         "laravel/framework": "^7.29",
         "laravel/scout": "^8.6",
         "laravel/tinker": "^2.5"
