--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "algolia/algoliasearch-client-php": "^2.7",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "guzzlehttp/guzzle": "^7.2",
         "hisorange/browser-detect": "^4.3",
         "laravel/framework": "^7.29",
         "laravel/scout": "^8.6",
